--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "GameEngine/vendor/imgui"]
 	path = GameEngine/vendor/imgui
 	url = https://github.com/TheCherno/imgui
+[submodule "GameEngine/vendor/glm"]
+	path = GameEngine/vendor/glm
+	url = https://github.com/g-truc/glm
