--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,18 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=576,49
-Size=550,680
+ViewportPos=1183,206
+ViewportId=0xE927CF2F
+Size=445,844
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1464,863
 Collapsed=0
 
 [Window][Example: Console]
@@ -13,8 +23,13 @@ Pos=60,60
 Size=520,600
 Collapsed=0
 
-[Window][Example: Log]
+[Window][Test]
 Pos=60,60
-Size=500,400
+Size=93,48
 Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0xFA06BC56 Pos=531,169 Size=1464,844 Split=Y
+  DockNode  ID=0x00000003 Parent=0xFA06BC56 SizeRef=1280,506 CentralNode=1
+  DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=1280,193
 
