--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -3,9 +3,9 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Dear ImGui Demo]
-ViewportPos=1183,206
-ViewportId=0xE927CF2F
+[Window][ImGui Demo]
+ViewportPos=1079,102
+ViewportId=0x080FC883
 Size=445,844
 Collapsed=0
 
@@ -26,10 +26,12 @@ Collapsed=0
 [Window][Test]
 Pos=60,60
 Size=93,48
+Collapsed=1
+
+[Window][Dear ImGui Demo]
+Pos=650,20
+Size=550,680
 Collapsed=0
 
 [Docking][Data]
-DockSpace   ID=0xFA06BC56 Pos=531,169 Size=1464,844 Split=Y
-  DockNode  ID=0x00000003 Parent=0xFA06BC56 SizeRef=1280,506 CentralNode=1
-  DockNode  ID=0x00000004 Parent=0xFA06BC56 SizeRef=1280,193
 
