--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -35,8 +35,7 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1041,772
-ViewportId=0x1C33C293
+Pos=109,84
 Size=438,144
 Collapsed=0
 
