Timer was added for profiling.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -35,7 +35,8 @@ Size=550,680
 Collapsed=0
 
 [Window][Settings]
-Pos=109,84
+ViewportPos=1544,278
+ViewportId=0x1C33C293
 Size=438,144
 Collapsed=0
 
