Created game was refactored. Build manager was added. License was added.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -39,5 +39,11 @@ Pos=13,547
 Size=438,144
 Collapsed=0
 
+[Window][Build]
+ViewportPos=-2156,297
+ViewportId=0x7C61DDDF
+Size=1766,806
+Collapsed=0
+
 [Docking][Data]
 
