--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -90,6 +90,10 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>IF NOT EXIST "..\bin\Debug-windows-x86_64\Sandbox\assets" (mkdir "..\bin\Debug-windows-x86_64\Sandbox\assets")
+xcopy /Q /E /Y /I "$(SolutionDir)Sandbox\assets" "..\bin\Debug-windows-x86_64\Sandbox\assets"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -111,6 +115,10 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <PostBuildEvent>
+      <Command>IF NOT EXIST "..\bin\Release-windows-x86_64\Sandbox\assets" (mkdir "..\bin\Release-windows-x86_64\Sandbox\assets")
+xcopy /Q /E /Y /I "$(SolutionDir)Sandbox\assets" "..\bin\Release-windows-x86_64\Sandbox\assets"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'">
     <ClCompile>
@@ -132,35 +140,35 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
+    <PostBuildEvent>
+      <Command>IF NOT EXIST "..\bin\Dist-windows-x86_64\Sandbox\assets" (mkdir "..\bin\Dist-windows-x86_64\Sandbox\assets")
+xcopy /Q /E /Y /I "$(SolutionDir)Sandbox\assets" "..\bin\Dist-windows-x86_64\Sandbox\assets"</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Color.h" />
+    <ClInclude Include="src\ExampleLayer.h" />
+    <ClInclude Include="src\PlaySceneLayer.h" />
+    <ClInclude Include="src\Course.h" />
+    <ClInclude Include="src\FXSystem.h" />
+    <ClInclude Include="src\Ship.h" />
+    <ClInclude Include="src\RNG.h" />
+    <ClInclude Include="src\Sandbox2D.h" />
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="src\ExampleLayer.cpp" />
-    <ClCompile Include="src\GameLayer.cpp" />
-    <ClCompile Include="src\Level.cpp" />
-    <ClCompile Include="src\ParticleSystem.cpp" />
-    <ClCompile Include="src\Player.cpp" />
-    <ClCompile Include="src\Random.cpp" />
+    <ClCompile Include="src\PlaySceneLayer.cpp" />
+    <ClCompile Include="src\Course.cpp" />
+    <ClCompile Include="src\FXSystem.cpp" />
+    <ClCompile Include="src\Ship.cpp" />
+    <ClCompile Include="src\RNG.cpp" />
     <ClCompile Include="src\Sandbox2D.cpp" />
-    <ClCompile Include="src\SandboxApp.cpp" />
+    <ClCompile Include="src\App.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GameEngine\GameEngine.vcxproj">
       <Project>{D54F7917-C107-BB64-2A0F-94C016E65555}</Project>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="assets\shaders\FlatColor.glsl" />
-    <None Include="assets\shaders\Texture.glsl" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="src\Color.h" />
-    <ClInclude Include="src\ExampleLayer.h" />
-    <ClInclude Include="src\GameLayer.h" />
-    <ClInclude Include="src\Level.h" />
-    <ClInclude Include="src\ParticleSystem.h" />
-    <ClInclude Include="src\Player.h" />
-    <ClInclude Include="src\Random.h" />
-    <ClInclude Include="src\Sandbox2D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
